[gd_scene load_steps=8 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://light.png" type="Texture" id=2]
[ext_resource path="res://thruster.wav" type="AudioStream" id=3]
[ext_resource path="res://dig.wav" type="AudioStream" id=4]
[ext_resource path="res://human.wav" type="AudioStream" id=5]
[ext_resource path="res://tractor.wav" type="AudioStream" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
collision/safe_margin = 0.01
script = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -0.8, -0.75, 0.8, 0.75, 0.8 )

[node name="ShipPolygon2D" type="Polygon2D" parent="."]
color = Color( 0, 0.784314, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -0.75, 0.7, 0, -0.8, 0.75, 0.7, 0.4, 0.8, 0, 0.6, -0.4, 0.8 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 2 )
texture_scale = 0.15
energy = 0.5

[node name="ThrusterPolygon2D" type="Polygon2D" parent="."]
material = SubResource( 1 )
position = Vector2( 0, 0.7 )
color = Color( 0, 0.501961, 0, 1 )
polygon = PoolVector2Array( -0.4, 0.2, 0, 1, 0.4, 0.2, 0, 0 )

[node name="ThrusterSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="TractorSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="DigSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="RescueSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.487
